; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_si7021.c_write_byte.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_si7021.c_write_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@si7021_i2c_id = common dso_local global i32 0, align 4
@si7021_i2c_addr = common dso_local global i32 0, align 4
@PLATFORM_I2C_DIRECTION_TRANSMITTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @write_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_byte(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* @si7021_i2c_id, align 4
  %5 = call i32 @platform_i2c_send_start(i32 %4)
  %6 = load i32, i32* @si7021_i2c_id, align 4
  %7 = load i32, i32* @si7021_i2c_addr, align 4
  %8 = load i32, i32* @PLATFORM_I2C_DIRECTION_TRANSMITTER, align 4
  %9 = call i32 @platform_i2c_send_address(i32 %6, i32 %7, i32 %8)
  %10 = load i32, i32* @si7021_i2c_id, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @platform_i2c_send_byte(i32 %10, i32 %11)
  %13 = load i32, i32* @si7021_i2c_id, align 4
  %14 = call i32 @platform_i2c_send_stop(i32 %13)
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @platform_i2c_send_start(i32) #1

declare dso_local i32 @platform_i2c_send_address(i32, i32, i32) #1

declare dso_local i32 @platform_i2c_send_byte(i32, i32) #1

declare dso_local i32 @platform_i2c_send_stop(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
